UPDATE: Fixed several alignment and spacing issues to various elements on the homepage // Added background colors and badge

--- a/style/main.css
+++ b/style/main.css
@@ -1,18 +1,10 @@
-.header-img {
-  width: 162px;
-  height: 63px;
-  padding: 13px 89px 13px 89px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+/**Create new "flex" mixin without "align-items: center" (what to name it?)**/
+.main-container {
+  max-width: 100%;
+  text-decoration: none;
 }
 
 .body-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   background-color: white;
 }
 .body-container__heading {
@@ -22,6 +14,14 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-left: 20px;
+}
+
+.align-txt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 .font-txt {
@@ -38,30 +38,39 @@
   color: white;
 }
 
-.step-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: #F6F6F6;
-  border-radius: 20px;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1490196078);
-}
-.step-section__number {
-  color: var(--White, #FFF);
-  font-family: Roboto;
-  font-size: 14.182px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  border-radius: 50%;
-  height: 20px;
-  width: 20px;
-  background-color: #9356DC;
+.loc-txt {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  gap: 17px;
+}
+.loc-txt__container {
+  width: 100%;
+  height: 50px;
+}
+.loc-txt__bg {
+  background-color: #EAEAEA;
+}
+
+.header-img {
+  width: 162px;
+  height: 63px;
+  padding: 13px 89px 13px 89px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.hero-container {
+  width: 100%;
+  height: 375px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  background-color: #F6F6F6;
 }
 
 .hero-title {
@@ -81,6 +90,7 @@
   color: #353535;
 }
 
+/**Why is hero-title__txt using hero-title styling?**/
 .button {
   border: none;
   background-color: transparent;
@@ -93,14 +103,83 @@
   flex-direction: row;
   border-radius: 25px;
   background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
   color: white;
 }
 
+.step-section {
+  width: 323px;
+  height: 69px;
+  gap: 20px;
+  border-radius: 20px;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  background-color: #F6F6F6;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1019607843);
+}
+.step-section__number {
+  color: var(--White, #FFF);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  background-color: #9356DC;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
 .card {
-  width: 340px;
-  height: 251px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 346px;
+  height: 231px;
   border-radius: 15px;
   overflow: hidden;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
+}
+.card--title {
+  color: #000;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.card--txt {
+  color: #000;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.badge {
+  width: 80px;
+  height: 29px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: var(--Green-Font, #008766);
+}
+.badge__bg {
+  border-radius: 2px;
+  background-color: #99E2D0;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
 .footer {
@@ -121,11 +200,4 @@
   font-weight: 400;
   line-height: normal;
   margin-bottom: 16px;
-}
-
-.align-txt {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
 }/*# sourceMappingURL=main.css.map */
